[package]
name = "sourcers"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
byteorder = "1.5.0"
capstone = "0.12.0"
capstone-sys = "0.16.0"
clap = { version = "4.5.18", features = ["derive"] }
clap-num = "1.1.1"
log = "0.4.22"
packed_struct = "0.10.1"
serde = { version = "1.0.210", features = ["derive"] }
